<resources>
    <string name="app_name">Virgin Money</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_went_wrong_try_again">Something went wrong, try again</string>
    <string name="first_name_detail">First Name Detail</string>
    <string name="last_name_detail">Last Name Detail</string>
    <string name="email_detail">Email Detail</string>
    <string name="job_title_detail">Job Title Detail</string>
    <string name="favorite_color_detail">Favorite color Detail</string>
</resources>