<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.PeopleDetailFragment">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/favoriteColorDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/favoriteColorDetail"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView

        android:id="@+id/profileImageDetail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/firstNameDetail"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/first_name_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageDetail" />

    <TextView
        android:id="@+id/lastNameDetail"
        android:layout_width="0dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:maxLines="5"
        android:text="@string/last_name_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameDetail" />

    <TextView
        android:id="@+id/emailDetail"
        android:layout_width="0dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:maxLines="5"
        android:layout_marginTop="30dp"
        android:text="@string/email_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameDetail" />

    <TextView
        android:id="@+id/jobTitleDetail"
        android:layout_width="0dp"
        android:maxLines="5"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/job_title_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailDetail" />

    <TextView
        android:id="@+id/favoriteColorDetail"
        android:layout_width="0dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/favorite_color_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobTitleDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>